--- a/app/views/prototypes/questions/hello.html
+++ b/app/views/prototypes/questions/hello.html
@@ -28,14 +28,14 @@
       <li class="browse-list-item">
         <a class="browse-list-item-link" href="dob">About you</a>
         
-          <!--<p class="browse-list-item-body">
+          <p class="browse-list-item-body">
             Personal information about you
           </p>
         
         
           <p class="browse-list-item-subtext">
-            Procurement framework: <a href="#">G-Cloud</a>
-          </p>-->
+            Lorem ipsum dolor sit amet  <a href="#">Lorem ipsum </a>
+          </p>
         
         
       </li>
@@ -44,9 +44,9 @@
         <a class="browse-list-item-link" href="#nope">Your time in further education</a>
         
         
-          <!--<p class="browse-list-item-subtext">
-            Procurement framework: <a href="#"></a>
-          </p>-->
+          <p class="browse-list-item-subtext">
+            Lorem ipsum dolor sit amet<a href="#"></a>
+          </p>
         
         
       </li>
@@ -54,9 +54,9 @@
       <li class="browse-list-item">
         <a class="browse-list-item-link" href="#nope">Your qualifications</a>
         
-          <!--<p class="browse-list-item-body">
-            Find 
-          </p>-->
+          <p class="browse-list-item-body">
+            consectetur adipiscing elit
+          </p>
         
         
       </li>
@@ -85,14 +85,14 @@
       <li class="browse-list-item">
         <a class="browse-list-item-link" href="#">The subjects you teach</a>
         
-          <!--<p class="browse-list-item-body">
-            Something here
+          <p class="browse-list-item-body">
+            quis nostrud exercitation ullamco 
           </p>
         
         
           <p class="browse-list-item-subtext">
-            OMG <a href="#">something</a>
-          </p>-->
+        Lorem ipsum dolor sit amet <a href="#">consectetur adipiscing elit</a>
+          </p>
         
         
       </li>
@@ -101,9 +101,9 @@
         <a class="browse-list-item-link" href="#nope">About your contract</a>
         
         
-          <!--<p class="browse-list-item-subtext">
-            Something <a href="#">Services</a>
-          </p>-->
+          <p class="browse-list-item-subtext">
+       Lorem ipsum dolor sit amet <a href="#">consectetur adipiscing </a>
+          </p>
         
         
       </li>
