--- a/app/views/prototypes/questions/answers-staff.html
+++ b/app/views/prototypes/questions/answers-staff.html
@@ -35,7 +35,7 @@
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="one">
-                Change<span class="govuk-visually-hidden"> name</span>
+                <span class="govuk-visually-hidden"> name</span>
               </a>
             </dd>
 
