--- a/app/views/prototypes/questions/disability.html
+++ b/app/views/prototypes/questions/disability.html
@@ -26,7 +26,7 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        Do you have a disablity?
+        Do you have a disability?
       </h1>
     </legend>
     <div class="govuk-radios">
