new collection idea

--- a/app/views/prototypes/questions/dob.html
+++ b/app/views/prototypes/questions/dob.html
@@ -62,7 +62,7 @@
 </div><br>
 
 
-          <a href="gender" class="govuk-button show-continue" style="display: inline;">
+          <a href="hello" class="govuk-button show-continue" style="display: inline;">
       Save and continue
     </a>
        
