--- a/app/views/prototypes/questions/hello.html
+++ b/app/views/prototypes/questions/hello.html
@@ -26,7 +26,7 @@
   <ul class="browse-list">
     
       <li class="browse-list-item">
-        <a class="browse-list-item-link" href="dob">About you</a>
+        <a class="browse-list-item-link" href="gender">About you</a>
         
           <p class="browse-list-item-body">
             Personal information about you
