new collection idea

--- a/app/views/prototypes/upload/upload.html
+++ b/app/views/prototypes/upload/upload.html
@@ -27,7 +27,7 @@
     
 
 
-      <h1 class="govuk-heading-xl">Upload a CSV file</h1>
+      <h1 class="govuk-heading-xl">Upload a file</h1>
 
 <div class="govuk-inset-text">
   Include four columns <br> 1. staff names  2. email address 3. date of birth  4. your internal staff ID.
