new collection idea

--- a/app/views/prototypes/upload/choose.html
+++ b/app/views/prototypes/upload/choose.html
@@ -29,9 +29,8 @@
 </h1>
 
             
-<div class="govuk-inset-text">
-  Include roles filled with tempoary staff but not agency workers.<br>
-  Include part-time staff.
+<div class="govuk-inset-text">Include management, teaching and support staff.
+  Include tempoary staff but not agency workers. Include part-time staff.
 </div>
 
   <div class="govuk-form-group">
