--- a/app/views/prototypes/upload/mis.html
+++ b/app/views/prototypes/upload/mis.html
@@ -25,7 +25,7 @@
           <div class="govuk-form-group">
 
             <h1 class="govuk-heading-xl">
- How do you want to tell us your staff details
+ How do you want to tell us about your staff?
 </h1>
 
 
@@ -36,22 +36,22 @@
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-          Add your staff details into this service on their behalf
+          Enter your staff information here - on their behalf
         </label>
-      </div>
+      </div><br>
 
-      <!--<h2 class="govuk-heading-m">Add your staff names and email addresses and we will send them a link to a portal to complete their own details</h2>
+      <h2 class="govuk-heading-m">Enter your staff email addresses so they can complete their own details</h2>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-          Add staff emails by entering them into this service
+          Enter staff emails here
         </label>
-      </div>-->
+      </div>
 
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="#" name="#" type="radio" value="#">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-          Upload a file with basic details and ask staff to add their own details
+          Upload a file with names and email addresses from your own system
         </label>
       </div>
 
