--- a/app/views/prototypes/upload/posts.html
+++ b/app/views/prototypes/upload/posts.html
@@ -25,19 +25,22 @@
 
             <h1 class="govuk-heading-xl">
   Did you have posts that were difficult to fill?
-
-
-
       
     </legend>
 </div>
 
 <div class="govuk-form-group">
+
+    <div class="govuk-inset-text">
+  What does difficult mean?
+</div>
+
+<div class="govuk-form-group">
   <fieldset class="govuk-fieldset" aria-describedby="changed-name-hint">
     
-    <span id="changed-name-hint" class="govuk-hint">
+    <!--<span id="changed-name-hint" class="govuk-hint">
       1 September 2020 - 31 August 2021
-    </span>
+    </span>-->
     <div class="govuk-radios govuk-radios--inline">
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="changed-name" name="changed-name" type="radio" value="yes">
@@ -56,7 +59,7 @@
 </div>
 
 
-</fieldset>
+</fieldset><br><br>
 
 
           <a href="staff" class="govuk-button show-continue" style="display: inline;">
