--- a/app/views/prototypes/upload/staff-last.html
+++ b/app/views/prototypes/upload/staff-last.html
@@ -28,15 +28,20 @@
 </h1>
 
             
-<div class="govuk-inset-text">We will email a link where they can add their details</div>
+<div class="govuk-inset-text">An email has been sent with a link to add their own details</div>
 
 
 
         <dl class="govuk-summary-list govuk-!-margin-bottom-3">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              John Vincent Adams
+              Adams
             </dt>
+
+            <dt class="govuk-summary-list__value">
+            John
+            </dt>
+
             <dd class="govuk-summary-list__value">
               jadams@impact-training.com
             </dd>
@@ -45,9 +50,8 @@
             </dd>
 
             <dd class="govuk-summary-list__value">
-              Email a self service link
+              Emailed
             </dd>
-
 
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="one-revisit">
@@ -59,10 +63,14 @@
           
         </dl>
 
-        <dl class="govuk-summary-list govuk-!-margin-bottom-4">
+        <dl class="govuk-summary-list govuk-!-margin-bottom-3">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Julie Angelo
+              Angelo
+            </dt>
+
+            <dt class="govuk-summary-list__value">
+             Julie Anne
             </dt>
             <dd class="govuk-summary-list__value">
               jangelo@impact-training.com
@@ -72,7 +80,7 @@
             </dd>
 
             <dd class="govuk-summary-list__value">
-              Email a self service link
+              Emailed
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="#" href="posts-revisit">
@@ -87,10 +95,14 @@
 
          
 
-        <dl class="govuk-summary-list govuk-!-margin-bottom-4">
+        <dl class="govuk-summary-list govuk-!-margin-bottom-3">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-             Kam Balachandra
+             Balachandra
+            </dt>
+
+            <dt class="govuk-summary-list__value">
+             Kam
             </dt>
             <dd class="govuk-summary-list__value">
               kbalachandra@impact-training.com
@@ -100,7 +112,7 @@
             </dd>
 
             <dd class="govuk-summary-list__value">
-              Email a self service link
+              Emailed
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="#" href="posts-revisit">
@@ -112,11 +124,16 @@
         </dl>
 
 
-        <dl class="govuk-summary-list govuk-!-margin-bottom-4">
+        <dl class="govuk-summary-list govuk-!-margin-bottom-3">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-             Bernie O'Donnell
+             O'Donnell
             </dt>
+
+             <dt class="govuk-summary-list__value">
+             Bernie
+            </dt>
+
             <dd class="govuk-summary-list__value">
               bodonnell@impact-training.com
             </dd>
@@ -125,7 +142,7 @@
             </dd>
 
             <dd class="govuk-summary-list__value">
-              Email a self service link
+              Emailed
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="#" href="posts-revisit">
@@ -137,11 +154,16 @@
 
         </dl>
 
-        <dl class="govuk-summary-list govuk-!-margin-bottom-4">
+        <dl class="govuk-summary-list govuk-!-margin-bottom-3">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-             Jane Walthemstow
+             Walthemstow
             </dt>
+
+            <dt class="govuk-summary-list__value">
+            Jane
+            </dt>
+
             <dd class="govuk-summary-list__value">
               jwalthemstow@impact-training.com
             </dd>
@@ -150,7 +172,7 @@
             </dd>
 
             <dd class="govuk-summary-list__value">
-              Email a self service link
+              Emailed
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="#" href="posts-revisit">
