--- a/app/views/prototypes/upload/staff.html
+++ b/app/views/prototypes/upload/staff.html
@@ -29,7 +29,7 @@
 
             
 <div class="govuk-inset-text">
-  Enter the total amount for teaching and non-teaching staff for 2020/21.
+  Enter the total amount for teaching and non-teaching staff for 2021/22
 </div>
 
 <div class="govuk-form-group">
