--- a/app/views/prototypes/upload/one.html
+++ b/app/views/prototypes/upload/one.html
@@ -19,17 +19,12 @@
   <h1 class="govuk-heading-m">Impact Training Limited
   <span class="govuk-caption-m">UKPRN: 00012345</span></h1>
 
-  
-        
-          <div class="govuk-form-group">
 
             <h1 class="govuk-heading-xl">
   How many vacant teaching posts do you have?
 </h1>
 
   <div class="govuk-form-group">
-  <fieldset class="govuk-fieldset" aria-describedby="">
-    
 
     <div class="govuk-inset-text">
   Include vacancies filled by agency staff
@@ -37,7 +32,7 @@
   
     <div class="govuk-form-group">
     <label class="govuk-label" for="address-postcode">
-      Add the number of posts vacant today
+      Add the number of posts vacant today????
     </label>
     <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
   </div>
