--- a/app/views/prototypes/upload/upload.html
+++ b/app/views/prototypes/upload/upload.html
@@ -22,15 +22,15 @@
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
         
-          <div class="govuk-form-group">
- 
-    
+          
 
+
+          <div class="govuk-form-group">
 
       <h1 class="govuk-heading-xl">Upload a file</h1>
 
 <div class="govuk-inset-text">
-  Include four columns <br> 1. staff names  2. email address 3. date of birth  4. your internal staff ID.
+  Include five columns <br> 1. first name 2. last name  3. email address 4. date of birth  5. your staff ID.
 </div>
 <br>
 
@@ -41,11 +41,7 @@
   <input class="govuk-file-upload" id="file-upload-1" name="file-upload-1" type="file">
 </div>
 
-
-
 </div>
-
-
 
 
 
