new collection idea

--- a/app/views/prototypes/upload/staff-last.html
+++ b/app/views/prototypes/upload/staff-last.html
@@ -39,7 +39,7 @@
             </dt>
 
             <dt class="govuk-summary-list__value">
-            John
+            John Vincent
             </dt>
 
             <dd class="govuk-summary-list__value">
