--- a/app/views/prototypes/upload/upload.html
+++ b/app/views/prototypes/upload/upload.html
@@ -30,7 +30,7 @@
       <h1 class="govuk-heading-xl">Upload a file</h1>
 
 <div class="govuk-inset-text">
-  Include five columns <br> 1. first name 2. last name  3. email address 4. date of birth  5. your staff ID.
+  Include five columns <br> 1. last name 2. first name  3. email address 4. date of birth  5. your staff ID.
 </div>
 <br>
 
@@ -45,7 +45,7 @@
 
 
 
-          <a href="staff-list" class="govuk-button show-continue" style="display: inline;">
+          <a href="staff-last" class="govuk-button show-continue" style="display: inline;">
       Save and continue
     </a>
        
