new collection idea

--- a/app/views/prototypes/questions/hello.html
+++ b/app/views/prototypes/questions/hello.html
@@ -33,9 +33,9 @@
           </p>
         
         
-          <p class="browse-list-item-subtext">
+         <!-- <p class="browse-list-item-subtext">
             Lorem ipsum dolor sit amet  <a href="#">Lorem ipsum </a>
-          </p>
+          </p>-->
         
         
       </li>
@@ -54,9 +54,9 @@
       <li class="browse-list-item">
         <a class="browse-list-item-link" href="#nope">Your qualifications</a>
         
-          <p class="browse-list-item-body">
+          <!--<p class="browse-list-item-body">
             consectetur adipiscing elit
-          </p>
+          </p>-->
         
         
       </li>
@@ -85,20 +85,20 @@
       <li class="browse-list-item">
         <a class="browse-list-item-link" href="#">The subjects you teach</a>
         
-          <p class="browse-list-item-body">
+          <!-- <p class="browse-list-item-body">
             quis nostrud exercitation ullamco 
           </p>
         
         
-          <p class="browse-list-item-subtext">
+         <p class="browse-list-item-subtext">
         Lorem ipsum dolor sit amet <a href="#">consectetur adipiscing elit</a>
-          </p>
+          </p>-->
         
         
       </li>
     
       <li class="browse-list-item">
-        <a class="browse-list-item-link" href="#nope">About your contract</a>
+        <a class="browse-list-item-link" href="#nope">Your contract</a>
         
         
           <p class="browse-list-item-subtext">
