--- a/app/views/prototypes/upload/staff-last.html
+++ b/app/views/prototypes/upload/staff-last.html
@@ -191,7 +191,7 @@
 
 
           <a href="start-staff" class="govuk-button show-continue" >
-      Save
+      Continue
     </a>
        
       </div>
