new collection idea

--- a/app/views/prototypes/questions/answers-staff.html
+++ b/app/views/prototypes/questions/answers-staff.html
@@ -50,7 +50,7 @@
               Male
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="two">
+              <a class="govuk-link" href="gender2">
                 Change<span class="govuk-visually-hidden"> Gender</span>
               </a>
             </dd>
@@ -65,7 +65,7 @@
               Asian or Asian British
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="one">
+              <a class="govuk-link" href="ethnicity2">
                 Change<span class="govuk-visually-hidden"> Ethnicity</span>
               </a>
             </dd>
@@ -79,7 +79,7 @@
               No
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="two">
+              <a class="govuk-link" href="disability2">
                 Change<span class="govuk-visually-hidden"> Disability</span>
               </a>
             </dd>
@@ -93,7 +93,7 @@
               British
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="two">
+              <a class="govuk-link" href="nationality2">
                 Change<span class="govuk-visually-hidden"> Nationality</span>
               </a>
             </dd>
