--- a/app/views/prototypes/questions/disability2.html
+++ b/app/views/prototypes/questions/disability2.html
@@ -63,7 +63,7 @@
 </div>
 
 
-          <a href="nationality" class="govuk-button show-continue" style="display: inline;">
+          <a href="answers-staff" class="govuk-button show-continue" style="display: inline;">
       Save and continue
     </a>
        
