--- a/app/views/prototypes/questions/hello.html
+++ b/app/views/prototypes/questions/hello.html
@@ -53,6 +53,10 @@
     
       <li class="browse-list-item">
         <a class="browse-list-item-link" href="#nope">Your qualifications</a>
+
+        <p class="browse-list-item-subtext">
+            Lorem ipsum dolor sit amet<a href="#"></a>
+          </p>
         
           <!--<p class="browse-list-item-body">
             consectetur adipiscing elit
@@ -63,8 +67,10 @@
     
   </ul>
 </nav>
+
+
   
-<div class="browse-list-item-status-happy">
+<!--<div class="browse-list-item-status-happy">
               <p class="browse-list-item-status-title">
                 You are submitting
               </p>
@@ -76,14 +82,24 @@
                       subject qualifications
                     </li>
                 </ul>
-            </div><br>
+            </div>-->
+
+
+            
   
+
+
+
 
 <nav role="navigation">
   <ul class="browse-list">
     
       <li class="browse-list-item">
         <a class="browse-list-item-link" href="#">The subjects you teach</a>
+
+        <p class="browse-list-item-subtext">
+            Lorem ipsum dolor sit amet<a href="#"></a>
+          </p>
         
           <!-- <p class="browse-list-item-body">
             quis nostrud exercitation ullamco 
