--- a/app/views/prototypes/questions/gender2.html
+++ b/app/views/prototypes/questions/gender2.html
@@ -20,20 +20,19 @@
   <span class="govuk-caption-m">Impact Training Limited</span></h1>
 
   <br>
-    
         
           <div class="govuk-form-group">
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        Do you have a disability?
+        What is your gender?
       </h1>
     </legend>
     <div class="govuk-radios">
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group" name="ethnic-group" type="radio" value="asian-or-asian-british" aria-describedby="ethnic-group-item-hint">
         <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group">
-          Yes
+          Male
         </label>
         <span id="ethnic-group-item-hint" class="govuk-hint govuk-radios__hint">
           
@@ -42,13 +41,21 @@
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group-2" name="ethnic-group" type="radio" value="black-african-black-british-or-caribbean" aria-describedby="ethnic-group-2-item-hint">
         <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-2">
-          No
+          Female
         </label>
         <span id="ethnic-group-2-item-hint" class="govuk-hint govuk-radios__hint">
           
         </span>
       </div>
-      
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group-3" name="ethnic-group" type="radio" value="mixed-or-multiple-ethnic-groups" aria-describedby="ethnic-group-3-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-3">
+          Other
+        </label>
+        <span id="ethnic-group-3-item-hint" class="govuk-hint govuk-radios__hint">
+          
+        </span>
+      </div>
       
       
       <div class="govuk-radios__divider">or</div>
@@ -63,7 +70,8 @@
 </div>
 
 
-          <a href="nationality" class="govuk-button show-continue" style="display: inline;">
+
+          <a href="answers-staff" class="govuk-button show-continue" style="display: inline;">
       Save and continue
     </a>
        
