new collection idea

--- a/app/views/prototypes/provider/posts.html
+++ b/app/views/prototypes/provider/posts.html
@@ -21,37 +21,49 @@
 
   
         
-          <div class="govuk-form-group">
+          
 
-            <h1 class="govuk-heading-xl">
-  Did you have posts that were difficult to fill?
-      
-    </legend>
-</div>
 
-<div class="govuk-form-group">
 
-    <div class="govuk-inset-text">
-  What does difficult mean?
-</div>
-
-<div class="govuk-form-group">
-  <fieldset class="govuk-fieldset" aria-describedby="changed-name-hint">
     
-    <!--<span id="changed-name-hint" class="govuk-hint">
-      1 September 2020 - 31 August 2021
-    </span>-->
-    <div class="govuk-radios govuk-radios--inline">
+
+<div class="govuk-form-group">
+  <fieldset class="govuk-fieldset">
+    <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
+      <h1 class="govuk-fieldset__heading">
+        Have you found it difficult to recruit staff?
+      </h1>
+    </legend>
+    <div class="govuk-radios">
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="changed-name" name="changed-name" type="radio" value="yes">
-        <label class="govuk-label govuk-radios__label" for="changed-name">
-          Yes
+        <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
+        <label class="govuk-label govuk-radios__label" for="where-do-you-live">
+          Easy
         </label>
       </div>
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="changed-name-2" name="changed-name" type="radio" value="no">
-        <label class="govuk-label govuk-radios__label" for="changed-name-2">
-          No
+        <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
+        <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
+          Neither easy or difficult
+        </label>
+      </div>
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
+        <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
+          Difficult
+        </label>
+      </div>
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="where-do-you-live-4" name="where-do-you-live" type="radio" value="northern-ireland">
+        <label class="govuk-label govuk-radios__label" for="where-do-you-live-4">
+          Varies too much between vacancies
+        </label>
+      </div>
+
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
+        <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
+       Don't know
         </label>
       </div>
     </div>
@@ -59,7 +71,6 @@
 </div>
 
 
-</fieldset><br><br>
 
 
           <a href="staff" class="govuk-button show-continue" style="display: inline;">
