--- a/app/views/prototypes/provider/staff-last.html
+++ b/app/views/prototypes/provider/staff-last.html
@@ -34,7 +34,11 @@
 
         <dl class="govuk-summary-list govuk-!-margin-bottom-3">
           <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
+
+            <dt class="govuk-summary-list__value">
+            ITL00044
+            </dt>
+            <dt class="govuk-summary-list__value">
               Adams
             </dt>
 
@@ -43,14 +47,14 @@
             </dt>
 
             <dd class="govuk-summary-list__value">
-              jadams@impact-training.com
+              jadams@impacttraining.com
             </dd>
             <dd class="govuk-summary-list__value">
               18.08.1991
             </dd>
 
             <dd class="govuk-summary-list__value">
-              Emailed
+              Send
             </dd>
 
             <dd class="govuk-summary-list__actions">
@@ -65,7 +69,12 @@
 
         <dl class="govuk-summary-list govuk-!-margin-bottom-3">
           <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
+
+            <dt class="govuk-summary-list__value">
+            ITL00045
+            </dt>
+
+            <dt class="govuk-summary-list__value">
               Angelo
             </dt>
 
@@ -73,14 +82,14 @@
              Julie Anne
             </dt>
             <dd class="govuk-summary-list__value">
-              jangelo@impact-training.com
+              jangelo@impacttraining.com
             </dd>
             <dd class="govuk-summary-list__value">
               05.05.1982
             </dd>
 
             <dd class="govuk-summary-list__value">
-              Emailed
+              Send
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="#" href="posts-revisit">
@@ -97,22 +106,26 @@
 
         <dl class="govuk-summary-list govuk-!-margin-bottom-3">
           <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-             Balachandra
+
+            <dt class="govuk-summary-list__value">
+            ITL00046
+            </dt>
+            <dt class="govuk-summary-list__value">
+             Chan
             </dt>
 
             <dt class="govuk-summary-list__value">
              Kam
             </dt>
             <dd class="govuk-summary-list__value">
-              kbalachandra@impact-training.com
+              kchan@impacttraining.com
             </dd>
             <dd class="govuk-summary-list__value">
               01.11.1989
             </dd>
 
             <dd class="govuk-summary-list__value">
-              Emailed
+              Send
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="#" href="posts-revisit">
@@ -126,8 +139,11 @@
 
         <dl class="govuk-summary-list govuk-!-margin-bottom-3">
           <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-             O'Donnell
+            <dt class="govuk-summary-list__value">
+            ITL00047
+            </dt>
+            <dt class="govuk-summary-list__value">
+             O'Tool
             </dt>
 
              <dt class="govuk-summary-list__value">
@@ -135,14 +151,14 @@
             </dt>
 
             <dd class="govuk-summary-list__value">
-              bodonnell@impact-training.com
+              botool@impacttraining.com
             </dd>
             <dd class="govuk-summary-list__value">
               11.02.1979
             </dd>
 
             <dd class="govuk-summary-list__value">
-              Emailed
+              Send
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="#" href="posts-revisit">
@@ -156,8 +172,11 @@
 
         <dl class="govuk-summary-list govuk-!-margin-bottom-3">
           <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-             Walthemstow
+            <dt class="govuk-summary-list__value">
+            ITL00048
+            </dt>
+            <dt class="govuk-summary-list__value">
+             Walt
             </dt>
 
             <dt class="govuk-summary-list__value">
@@ -165,14 +184,14 @@
             </dt>
 
             <dd class="govuk-summary-list__value">
-              jwalthemstow@impact-training.com
+              jwalt@impacttraining.com
             </dd>
             <dd class="govuk-summary-list__value">
               29.06.1996
             </dd>
 
             <dd class="govuk-summary-list__value">
-              Emailed
+              Send
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="#" href="posts-revisit">
