--- a/app/views/prototypes/provider/staff.html
+++ b/app/views/prototypes/provider/staff.html
@@ -24,7 +24,7 @@
           <div class="govuk-form-group">
 
             <h1 class="govuk-heading-xl">
-  How much of your income was spent on staff salaries?
+  What proportion of your funding was spent on staff salaries?
 </h1>
 
             
