--- a/app/views/prototypes/provider/answers-provider.html
+++ b/app/views/prototypes/provider/answers-provider.html
@@ -28,7 +28,7 @@
 
         <h2 class="govuk-heading-m">Teacher vacancies</h2>
 
-        <dl class="govuk-summary-list govuk-!-margin-bottom-9">
+        <dl class="govuk-summary-list govuk-!-margin-bottom-4">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
               Yes 
@@ -42,19 +42,18 @@
               </a>
             </dd>
           </div>
-
           
         </dl>
 
          
 
-        <dl class="govuk-summary-list govuk-!-margin-bottom-9">
+        <dl class="govuk-summary-list govuk-!-margin-bottom-4">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
              Difficult to fill
             </dt>
             <dd class="govuk-summary-list__value">
-              Maths - Construction level 2
+              Easy
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="posts-revisit">
@@ -62,14 +61,16 @@
               </a>
             </dd>
           </div>
-        </dl><br>
+        </dl>
+
+        <br><br>
 
         
 
 
         <h2 class="govuk-heading-m">Salary spend</h2>
 
-        <dl class="govuk-summary-list govuk-!-margin-bottom-9">
+        <dl class="govuk-summary-list govuk-!-margin-bottom-4">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
               Total spend
@@ -88,7 +89,7 @@
 
          
 
-        <dl class="govuk-summary-list govuk-!-margin-bottom-9">
+        <dl class="govuk-summary-list govuk-!-margin-bottom-4">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
              Percentage of total
