--- a/app/views/prototypes/provider/mis.html
+++ b/app/views/prototypes/provider/mis.html
@@ -36,22 +36,23 @@
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-          Enter your staff information here - on their behalf
+          Enter all your staff details - on their behalf
         </label>
-      </div><br>
+      </div><br><br>
 
-      <h2 class="govuk-heading-m">Enter your staff email addresses so they can complete their own details</h2>
+      <h2 class="govuk-heading-m">Staff self service</h2>
+      <p>Enter your staff email addresses so they can complete their own details</p>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-          Enter staff emails here
+         Add staff emails
         </label>
       </div>
 
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="#" name="#" type="radio" value="#">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-          Upload a file with names and email addresses from your own system
+          Upload a file with staff email addresses from your own system
         </label>
       </div>
 
