--- a/app/views/prototypes/provider/one.html
+++ b/app/views/prototypes/provider/one.html
@@ -21,7 +21,7 @@
 
 
             <h1 class="govuk-heading-xl">
-  How many vacant teaching posts do you have?
+  How many vacant teaching posts have you had over the last year?
 </h1>
 
   <div class="govuk-form-group">
@@ -32,7 +32,7 @@
   
     <div class="govuk-form-group">
     <label class="govuk-label" for="address-postcode">
-      Add the number of posts vacant today????
+      Add the number of posts
     </label>
     <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
   </div>
