--- a/app/views/prototypes/provider/upload.html
+++ b/app/views/prototypes/provider/upload.html
@@ -30,7 +30,7 @@
       <h1 class="govuk-heading-xl">Upload a file</h1>
 
 <div class="govuk-inset-text">
-  Include five columns <br> 1. last name 2. first name  3. email address 4. date of birth  5. your staff ID.
+  Include five columns <br> 1. Staff ID 2. Last name  3. First name  4. Email address   5. Date of birth
 </div>
 <br>
 
