--- a/app/views/prototypes/provider/posts.html
+++ b/app/views/prototypes/provider/posts.html
@@ -31,7 +31,7 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        Have you found it difficult to recruit staff?
+        Have you found it easy or difficult to recruit staff?
       </h1>
     </legend>
     <div class="govuk-radios">
