--- a/app/views/prototypes/provider/answers-provider.html
+++ b/app/views/prototypes/provider/answers-provider.html
@@ -50,7 +50,7 @@
         <dl class="govuk-summary-list govuk-!-margin-bottom-4">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-             Difficult to fill
+             Easy or difficult
             </dt>
             <dd class="govuk-summary-list__value">
               Easy
