--- a/app/views/prototypes/provider/start-staff.html
+++ b/app/views/prototypes/provider/start-staff.html
@@ -20,20 +20,37 @@
   <span class="govuk-caption-m">UKPRN: 00012345</span></h1>
 
   
-        <h1 class="govuk-heading-xl">FE staff collection
+        <h1 class="govuk-heading-xl">FE staff collection<br>
         <span class="govuk-caption-xl">August 2021 to September 2022</span></h1>
+
+        <p>As stated in the funding rules you must tell us about the staff you employ.</p>
+
+        <nav role="navigation">
+  <ul class="browse-list">
+    
+      <li class="browse-list-item">
+        <a class="browse-list-item-link" href="one">About my organisation</a>
+        
+        
+      </li>
+    
+      
+    
+      <li class="browse-list-item">
+        <a class="browse-list-item-link" href="choose">My staff</a>
+
+        
+        
+      </li>
+    
+  </ul>
+</nav>
 
 
         
 
        
-      <a href="one" button class="govuk-button govuk-button--secondary" data-module="govuk-button">
-  About my organisation
-</button></a><br>
-
-<a href="choose" button class="govuk-button govuk-button--secondary" data-module="govuk-button">
-  My staff
-</button></a><br>
+      
         
 
         
