new collection idea

--- a/app/views/prototypes/provider/mis.html
+++ b/app/views/prototypes/provider/mis.html
@@ -34,25 +34,25 @@
     
     <div class="govuk-radios">
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
+        <input class="govuk-radios__input" id="radio-1" name="where-do-you-live" type="radio" value="add-staff">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live">
           Enter all your staff details - on their behalf
         </label>
       </div><br><br>
 
-      <h2 class="govuk-heading-m">Staff self service</h2>
+      <h2 class="govuk-heading-m">Or</h2>
       <p>Enter your staff email addresses so they can complete their own details</p>
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
+        <input class="govuk-radios__input" id="radio-2" name="where-do-you-live" type="radio" value="scotland">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
          Add staff emails
         </label>
       </div>
 
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="#" name="#" type="radio" value="#">
+        <input class="govuk-radios__input" id="radio-3" name="#" type="radio" value="#">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-          Upload a file with staff email addresses from your own system
+          Upload a file with staff email addresses s
         </label>
       </div>
 
@@ -66,10 +66,11 @@
   </fieldset>
 </div>
 
-</fieldset><br><br><br>
+</fieldset><br><br>
 
 
-          <a href="upload" class="govuk-button show-continue" style="display: inline;">
+
+          <a  class="govuk-button show-continue" id="choice-button" style="display: inline;">
       Continue
     </a>
        
