--- a/app/views/prototypes/provider/staff-last.html
+++ b/app/views/prototypes/provider/staff-last.html
@@ -209,7 +209,7 @@
 <p class="govuk-table__cell--numeric"><a class="#" href="#">Add more staff</a> </p><br>
 
 
-          <a href="start-staff" class="govuk-button show-continue" >
+          <a href="confirmation" class="govuk-button show-continue" >
       Continue
     </a>
        
