--- a/app/views/prototypes/provider/add-staff.html
+++ b/app/views/prototypes/provider/add-staff.html
@@ -121,7 +121,7 @@
 </fieldset><br><br>
 
 
-          <a href="staff-list" class="govuk-button show-continue" style="display: inline;">
+          <a href="staff-list-short" class="govuk-button show-continue" style="display: inline;">
       Save and continue
     </a>
        
