--- a/app/views/prototypes/provider/confirmation.html
+++ b/app/views/prototypes/provider/confirmation.html
@@ -26,24 +26,24 @@
       <div class="govuk-grid-column-two-thirds">
         <div class="govuk-panel govuk-panel--confirmation">
           <h1 class="govuk-panel__title">
-            Staff data submitted
+            Staff emails submitted
           </h1>
           <div class="govuk-panel__body">
             Your reference number<br><strong>HDJ2123F</strong>
           </div>
         </div>
 
-        <p class="govuk-body">We have sent you a confirmation email.</p>
+        <p class="govuk-body"></p>
 
-        <h2 class="govuk-heading-m">What happens next</h2>
+        <h2 class="govuk-heading-m">We have sent your staff an email with a link to complete their own details</h2>
 
         
         <p class="govuk-body">
-          They will contact you to confirm your submission or to ask for more information.
+          You will be able to see who has completed their details by checking back here before the deadline date.
         </p>
 
         <p class="govuk-body">
-          <a href="#" class="govuk-link">What did you think of this service?</a> (takes 30 seconds)
+          <a href="#" class="govuk-link">What did your think of this service?</a> (takes 30 seconds)
         </p>
       </div>
     </div>
