new collection idea

--- a/app/views/prototypes/provider/mis.html
+++ b/app/views/prototypes/provider/mis.html
@@ -52,7 +52,7 @@
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="radio-3" name="#" type="radio" value="#">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-          Upload a file with staff email addresses s
+          Upload a file with staff email addresses
         </label>
       </div>
 
