--- a/app/views/prototypes/provider/choose.html
+++ b/app/views/prototypes/provider/choose.html
@@ -29,9 +29,9 @@
 </h1>
 
             
-<div class="govuk-inset-text">Include management, teaching and support staff.
+<p class="govuk-body">Include management, teaching and support staff.
   Include tempoary staff but not agency workers. Include part-time staff.
-</div>
+</p>
 
   <div class="govuk-form-group">
   <fieldset class="govuk-fieldset">
