--- a/app/views/prototypes/provider/one.html
+++ b/app/views/prototypes/provider/one.html
@@ -26,9 +26,9 @@
 
   <div class="govuk-form-group">
 
-    <div class="govuk-inset-text">
+    <p class="govuk-body">
   Include vacancies filled by agency staff
-</div>
+</p>
   
     <div class="govuk-form-group">
     <label class="govuk-label" for="address-postcode">
