--- a/app/views/prototypes/provider/staff-list-short.html
+++ b/app/views/prototypes/provider/staff-list-short.html
@@ -28,7 +28,7 @@
 </h1>
 
             
-<div class="govuk-inset-text">We will send them a link to an online form where they can add and submit their details</div>
+<p class="govuk-body">We will send them a link to an online form where they can add and submit their details</p>
 
 
 
