--- a/app/views/prototypes/provider/staff.html
+++ b/app/views/prototypes/provider/staff.html
@@ -28,9 +28,9 @@
 </h1>
 
             
-<div class="govuk-inset-text">
+<p class="govuk-body">
   Enter the total amount for teaching and non-teaching staff for 2021/22
-</div>
+</p>
 
 <div class="govuk-form-group">
   <label class="govuk-label" for="width-10">
