new section for new concept

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -60,7 +60,15 @@
       
 
 
+      <br><br><br>
+
+        <h2 class="govuk-heading-m">New start without staff self service</h2>
+
+        <p>New start - <a href="/prototypes/new-start/details">Bones of the service - waiting for the data set</a>
+      </p><br>
+
       <br><br>
+
 
 
       <h2 class="govuk-heading-m">Examples and documentation</h2>
