--- a/app/views/prototypes/new-start/answers-staff.html
+++ b/app/views/prototypes/new-start/answers-staff.html
@@ -35,7 +35,7 @@
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="one">
-                <span class="govuk-visually-hidden"> name</span>
+                Change<span class="govuk-visually-hidden"> name</span>
               </a>
             </dd>
 
@@ -50,7 +50,7 @@
               Male
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="gender2">
+              <a class="govuk-link" href="two">
                 Change<span class="govuk-visually-hidden"> Gender</span>
               </a>
             </dd>
@@ -65,7 +65,7 @@
               Asian or Asian British
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="ethnicity2">
+              <a class="govuk-link" href="one">
                 Change<span class="govuk-visually-hidden"> Ethnicity</span>
               </a>
             </dd>
@@ -79,7 +79,7 @@
               No
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="disability2">
+              <a class="govuk-link" href="two">
                 Change<span class="govuk-visually-hidden"> Disability</span>
               </a>
             </dd>
@@ -93,17 +93,27 @@
               British
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="nationality2">
+              <a class="govuk-link" href="two">
                 Change<span class="govuk-visually-hidden"> Nationality</span>
               </a>
             </dd>
           </div>
           
-     
+        
+
+
+        
+
+        
+          
+
+          
+
+          
 
         </dl>
 
-        <!--<h2 class="govuk-heading-m">Your time in FE</h2>
+        <h2 class="govuk-heading-m">Your time in FE</h2>
 
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
           <div class="govuk-summary-list__row">
@@ -269,12 +279,12 @@
   </main>
 </div>
 
-</fieldset><br>-->
+</fieldset><br>
 
 
-         <a href="hello" class="govuk-button show-continue" style="display: inline;">
-      Save and continue
-    </a>
+        <!--  <a href="seven" class="govuk-button show-continue" style="display: inline;">
+      Continue
+    </a>-->
        
       </div>
     </div>
