--- a/app/views/prototypes/new-start/confirmation.html
+++ b/app/views/prototypes/new-start/confirmation.html
@@ -25,7 +25,7 @@
       <div class="govuk-grid-column-two-thirds">
         <div class="govuk-panel govuk-panel--confirmation">
           <h1 class="govuk-panel__title">
-            Staff emails sent
+            Staff details submitted
           </h1>
           <div class="govuk-panel__body">
             Your reference number<br><strong>HDJ2123F</strong>
@@ -34,12 +34,11 @@
 
         <p class="govuk-body"></p>
 
-        <h2 class="govuk-heading-m">We have sent your staff an email with a link to complete their own details</h2>
+        <h2 class="govuk-heading-m">We have submitted your staff details</h2>
 
         
         <p class="govuk-body">
-          You will be able to see who has completed their details by checking back here before the deadline date.
-        </p>
+          You will be able to see the details of your submission here.
 
         <p class="govuk-body">
           <a href="#" class="govuk-link">What did your think of this service?</a> (takes 30 seconds)
