--- a/app/views/prototypes/new-start/mis.html
+++ b/app/views/prototypes/new-start/mis.html
@@ -36,23 +36,17 @@
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="radio-1" name="where-do-you-live" type="radio" value="add-staff">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-          Enter all your staff details - on their behalf
+          Answer questions about your staff
         </label>
-      </div><br><br>
+      </div><br>
 
       <h2 class="govuk-heading-m">Or</h2>
-      <p>Enter your staff email addresses so they can complete their own details</p>
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="radio-2" name="where-do-you-live" type="radio" value="scotland">
-        <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-         Add staff emails
-        </label>
-      </div>
+     
 
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="radio-3" name="#" type="radio" value="#">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-          Upload a file with staff email addresses
+          Upload a file with your staff details
         </label>
       </div>
 
