--- a/app/views/prototypes/new-start/staff-last.html
+++ b/app/views/prototypes/new-start/staff-last.html
@@ -27,9 +27,6 @@
   You have added 5 staff 
 </h1>
 
-            
-<div class="govuk-inset-text">An email has been sent with a link to add their own details</div>
-
 
 
         <dl class="govuk-summary-list govuk-!-margin-bottom-3">
@@ -47,19 +44,17 @@
             </dt>
 
             <dd class="govuk-summary-list__value">
-              jadams@impacttraining.com
+              Full time teacher
             </dd>
             <dd class="govuk-summary-list__value">
               18.08.1991
             </dd>
 
-            <dd class="govuk-summary-list__value">
-              Send
-            </dd>
-
+            
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="one-revisit">
-                Edit</a> <a class="#" href="one-revisit">Remove<span class="govuk-visually-hidden"> name</span>
+                Edit</a> <a class="govuk-link" href="one-revisit">
+                Add</a> <a class="#" href="one-revisit">Remove<span class="govuk-visually-hidden"> name</span>
               </a>
             </dd>
           </div>
@@ -82,18 +77,17 @@
              Julie Anne
             </dt>
             <dd class="govuk-summary-list__value">
-              jangelo@impacttraining.com
+              Full time teacher
             </dd>
             <dd class="govuk-summary-list__value">
               05.05.1982
             </dd>
 
-            <dd class="govuk-summary-list__value">
-              Send
-            </dd>
+            
             <dd class="govuk-summary-list__actions">
               <a class="#" href="posts-revisit">
-                Edit</a>
+                Edit</a><a class="govuk-link" href="one-revisit">
+                Add</a>
                 <a class="#" href="posts-revisit">Remove<span class="govuk-visually-hidden"> name</span>
               </a>
             </dd>
@@ -118,18 +112,17 @@
              Kam
             </dt>
             <dd class="govuk-summary-list__value">
-              kchan@impacttraining.com
+              Full time teacher
             </dd>
             <dd class="govuk-summary-list__value">
               01.11.1989
             </dd>
 
-            <dd class="govuk-summary-list__value">
-              Send
-            </dd>
+            
             <dd class="govuk-summary-list__actions">
               <a class="#" href="posts-revisit">
-                Edit</a>
+                Edit</a><a class="govuk-link" href="one-revisit">
+                Add</a>
                 <a class="#" href="posts-revisit">Remove<span class="govuk-visually-hidden"> name</span>
               </a>
             </dd>
@@ -151,18 +144,17 @@
             </dt>
 
             <dd class="govuk-summary-list__value">
-              botool@impacttraining.com
+              Full time teacher
             </dd>
             <dd class="govuk-summary-list__value">
               11.02.1979
             </dd>
 
-            <dd class="govuk-summary-list__value">
-              Send
-            </dd>
+            
             <dd class="govuk-summary-list__actions">
               <a class="#" href="posts-revisit">
-                Edit</a>
+                Edit</a><a class="govuk-link" href="one-revisit">
+                Add</a>
                 <a class="#" href="posts-revisit">Remove<span class="govuk-visually-hidden"> name</span>
               </a>
             </dd>
@@ -184,18 +176,17 @@
             </dt>
 
             <dd class="govuk-summary-list__value">
-              jwalt@impacttraining.com
+              Full time teacher
             </dd>
             <dd class="govuk-summary-list__value">
               29.06.1996
             </dd>
 
-            <dd class="govuk-summary-list__value">
-              Send
-            </dd>
+            
             <dd class="govuk-summary-list__actions">
               <a class="#" href="posts-revisit">
-                Edit</a>
+                Edit</a><a class="govuk-link" href="one-revisit">
+                Add</a>
                 <a class="#" href="posts-revisit">Remove<span class="govuk-visually-hidden"> name</span>
               </a>
             </dd>
