--- a/app/views/prototypes/new-start/upload.html
+++ b/app/views/prototypes/new-start/upload.html
@@ -29,10 +29,10 @@
 
       <h1 class="govuk-heading-xl">Upload a file</h1>
 
-<div class="govuk-inset-text">
+<!--<div class="govuk-inset-text">
   Include five columns <br> 1. Staff ID 2. Last name  3. First name  4. Email address   5. Date of birth
 </div>
-<br>
+<br>-->
 
 <div class="govuk-form-group">
   <label class="govuk-label" for="file-upload-1">
@@ -45,7 +45,7 @@
 
 
 
-          <a href="staff-last" class="govuk-button show-continue" style="display: inline;">
+          <a href="staff-more" class="govuk-button show-continue" style="display: inline;">
       Save and continue
     </a>
        
