--- a/app/views/prototypes/new-start/start-staff.html
+++ b/app/views/prototypes/new-start/start-staff.html
@@ -20,8 +20,10 @@
   <span class="govuk-caption-m">UKPRN: 00012345</span></h1>
 
   
-        <h1 class="govuk-heading-xl">FE staff collection<br>
-        <span class="govuk-caption-xl">August 2021 to September 2022</span></h1>
+        
+
+        <h1 class="govuk-heading-xl">FE staff collection
+  <span class="govuk-caption-xl">August 2021 to September 2022</span></h1>
 
         <p class="govuk-body">As stated in the funding rules you must tell us about the staff you employ.</p>
 
@@ -29,36 +31,21 @@
   <ul class="browse-list">
     
       <li class="browse-list-item">
-        <a class="browse-list-item-link" href="one">About my organisation</a>
-        
-        
-      </li>
+        <a class="browse-list-item-link" href="one">About my organisation</a> 
+        </li>
     
-      
     
       <li class="browse-list-item">
         <a class="browse-list-item-link" href="choose">My staff</a>
-
-        
-        
       </li>
     
   </ul>
 </nav>
-
-
-        
-
-       
-      
-        
-
         
       </div>
 
       
     </div>
-  </main>
-
+  
 
 {% endblock %}
