--- a/app/views/prototypes/new-start/staff-more.html
+++ b/app/views/prototypes/new-start/staff-more.html
@@ -140,7 +140,7 @@
 
 
           <a href="confirmation" class="govuk-button show-continue" >
-      Continue
+      Submit your staff details
     </a>
        
       </div>
