--- a/app/views/index.html
+++ b/app/views/index.html
@@ -64,7 +64,7 @@
 
         <h2 class="govuk-heading-m">New start without staff self service</h2>
 
-        <p>New start - <a href="/prototypes/new-start/details">Bones of the service - waiting for the data set</a>
+        <p>Absolutely throwing it at the wall - <a href="/prototypes/new-start/details">What it might look like while we wait for the data set to be agreed</a>
       </p><br>
 
       <br><br>
